# csv-parser

./: .clang-format  .gitignore  CMakeLists.txt
include/internal/: basic_csv_parser.cpp  basic_csv_parser.hpp  csv_format.cpp  csv_format.hpp  csv_reader.cpp  csv_utility.cpp
tests/: CMakeLists.txt  test_csv_format.cpp  test_csv_iterator.cpp  test_csv_stat.cpp  test_forked_parser.cpp  test_guess_csv.cpp  test_multi_delimiters.cpp  test_raw_csv_data.cpp  test_read_csv.cpp  test_read_csv_file.cpp  util.hpp
tests/samples/: basic_rules.csv  delimiter_separted_file.csv  space_separated.csv
